sitemap改为手动,update && debug

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -410,6 +410,7 @@
 }
 </style>
 -->
+<!-- 出问题了,禁用
 <div id="back-top">
   <a href="#top" title="回到顶部"></a>
 </div>
@@ -432,6 +433,7 @@ $(document).ready(function () {
   });
 });
 </script>
+-->
 
 {% if site.tota11y %}
 <script type="text/javascript" async="async"src="//cdnjs.cloudflare.com/ajax/libs/tota11y/0.1.6/tota11y.min.js"></script>
