--- a/css/Quanyin-global.css
+++ b/css/Quanyin-global.css
@@ -542,7 +542,7 @@ pre,
   color: #999;
   background-color: #EAF2F5;
 }
-/* Back to top */
+/* Back to top 
 #back-top {
   position: fixed;
   bottom: 30px;
@@ -552,7 +552,7 @@ pre,
   width: 54px;
   height: 54px;
   display: block;
-  background: #dddddd url(/Source/images/icons/Back-Top_Arrow.png) no-repeat center center;
+  background: #ddd url(/Source/images/icons/Back-Top_Arrow.png) no-repeat center center;
   background-color: #aaa;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
@@ -564,6 +564,7 @@ pre,
 #back-top a:hover {
   background-color: #777;
 }
+*/
 /* load-CommentGitment */
 #load-CommentGitment {
   background-color: #FFFFFF;
