--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,8 +60,10 @@ layout: default
 				<span class="time">
 				/
 				<time>{{ page.date | date:"%Y-%m-%d" }}</time>
+                {% if site.hit-kounter %}
 				<style>span.test {color: #0085A5;font-weight: bold;}</style>
-				</span>{% if site.hit-kounter %}/&nbsp;<span data-hk-page="current" class="test"> - </span>&nbsp;views{% endif %}
+				</span>/&nbsp;<span data-hk-page="current" class="test"> - </span>&nbsp;views
+                {% endif %}
                 <br>
 				<span><strong><em>Published under <a href="//creativecommons.org/licenses/by-nc-sa/4.0/">(CC) BY-NC-SA 4.0</a></em></strong>
 				</span>
