--- a/less/plugin.less
+++ b/less/plugin.less
@@ -1,4 +1,4 @@
-/* Back to top */
+/* Back to top 
 #back-top {
   position: fixed;
   bottom: 30px;
@@ -20,6 +20,7 @@
 #back-top a:hover {
   background-color: #777;
 }
+*/
 
 /* load-CommentGitment */
 #load-CommentGitment {
