--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     {% endif %}
     <!--<meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />-->
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+    <meta http-equiv="X-XSS-Protection" content="1;mode=block" />
     {% if site.enforce_ssl %}
         <script type="text/javascript">
             var host = "{{site.enforce_ssl}}";
@@ -63,8 +63,8 @@
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
     -->
 
-    <link rel="preload" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'" />
-    <noscript><link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" /></noscript>
+    <link rel="preload" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <noscript><link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /></noscript>
     <link rel="preload" type="text/css" href="{{ "/css/Quanyin-global.min.css" | prepend: site.baseurl }}" as="style" onload="this.rel='stylesheet'" />
     <noscript><link rel="stylesheet" type="text/css" href="{{ "/css/Quanyin-global.min.css" | prepend: site.baseurl }}" /></noscript>
     <link rel="preload" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="style" onload="this.rel='stylesheet'" />
