--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,7 +31,7 @@
     </div>
     <!-- /.container -->
 </nav>
-<!-- 集成到nav
+<!-- 集成到nav.js 失败 -->
 <script type="text/javascript">
     /* Drop Bootstarp low-performance Navbar  Use customize navbar with high-quality material design animation in high-perf jank-free CSS3 implementation */
     var $body   = document.body;
@@ -82,4 +82,3 @@
         __QuanyinNav__.close();
     })
 </script>
--->
