update && add post:README、CHANGELOG

--- a/css/Quanyin-global.css
+++ b/css/Quanyin-global.css
@@ -1,7 +1,4 @@
-/*! Quanyin Blog v1.0.0 (https://qytang326.github.io)
- * Copyright 2017 Quanyin Tang <qytang326@gmail.com>
- */
-
+/*! Quanyin Blog v1.0.0 (https://qytang326.github.io) || Copyright 2017 Quanyin Tang <qytang326@gmail.com> */
 @media (min-width: 1200px) {
   .post-container,
   .sidebar-container {
