update && compress html && debug:url乱码,禁用jekyll-mentions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: compress2
 ---
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" lang="zh-CN" >
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" >
     {% include head.html %}
 <!-- hack iOS CSS :active style -->
 <body ontouchstart="">
