--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <ul class="list-inline text-center">
                     {% if site.RSS %}
                     <li>
-                        <a target="_blank" rel=noreferrer href="{{ "/feed.xml" | prepend: site.baseurl }}">
+                        <a target="_blank" rel="noreferrer" href="{{ "/feed.xml" | prepend: site.baseurl }}">
                             <span class="fa-stack fa-lg">
                                 <em class="fa fa-circle fa-stack-2x"></em> 
                                 <em class="fa fa-rss fa-stack-1x fa-inverse"></em> 
@@ -16,7 +16,7 @@
                     {% endif %}
                     {% if site.twitter_username %}
                     <li>
-                        <a target="_blank" rel=noreferrer href="//twitter.com/{{ site.twitter_username }}">
+                        <a target="_blank" rel="noreferrer" href="//twitter.com/{{ site.twitter_username }}">
                             <span class="fa-stack fa-lg">
                                 <em class="fa fa-circle fa-stack-2x"></em> 
                                 <em class="fa fa-twitter fa-stack-1x fa-inverse"></em> 
@@ -28,7 +28,7 @@
                     <!-- add Weibo, Zhihu by Quanyin, add target = "_blank" to <a> by Quanyin -->
                     {% if site.zhihu_username %}
                     <li>
-                        <a target="_blank" rel=noreferrer href="//www.zhihu.com/people/{{ site.zhihu_username }}">
+                        <a target="_blank" rel="noreferrer" href="//www.zhihu.com/people/{{ site.zhihu_username }}">
                             <span class="fa-stack fa-lg">
                                 <em class="fa fa-circle fa-stack-2x"></em> 
                                 <em class="fa fa-stack-1x fa-inverse">知</em> 
@@ -38,7 +38,7 @@
                     {% endif %}
                     {% if site.weibo_username %}
                     <li>
-                        <a target="_blank" rel=noreferrer href="//weibo.com/{{ site.weibo_username }}">
+                        <a target="_blank" rel="noreferrer" href="//weibo.com/{{ site.weibo_username }}">
                             <span class="fa-stack fa-lg">
                                 <em class="fa fa-circle fa-stack-2x"></em> 
                                 <em class="fa fa-weibo fa-stack-1x fa-inverse"></em> 
@@ -49,7 +49,7 @@
 
                     {% if site.facebook_username %}
                     <li>
-                        <a target="_blank" rel=noreferrer href="//www.facebook.com/{{ site.facebook_username }}">
+                        <a target="_blank" rel="noreferrer" href="//www.facebook.com/{{ site.facebook_username }}">
                             <span class="fa-stack fa-lg">
                                 <em class="fa fa-circle fa-stack-2x"></em> 
                                 <em class="fa fa-facebook fa-stack-1x fa-inverse"></em> 
@@ -59,7 +59,7 @@
                     {% endif %}
                     {% if site.github_username %}
                     <li>
-                        <a target="_blank" rel=noreferrer href="//github.com/{{ site.github_username }}">
+                        <a target="_blank" rel="noreferrer" href="//github.com/{{ site.github_username }}">
                             <span class="fa-stack fa-lg">
                                 <em class="fa fa-circle fa-stack-2x"></em> 
                                 <em class="fa fa-github fa-stack-1x fa-inverse"></em> 
@@ -69,7 +69,7 @@
                     {% endif %}
                     {% if site.linkedin_username %}
                     <li>
-                        <a target="_blank" rel=noreferrer href="//www.linkedin.com/in/{{ site.linkedin_username }}">
+                        <a target="_blank" rel="noreferrer" href="//www.linkedin.com/in/{{ site.linkedin_username }}">
                             <span class="fa-stack fa-lg">
                                 <em class="fa fa-circle fa-stack-2x"></em> 
                                 <em class="fa fa-linkedin fa-stack-1x fa-inverse"></em> 
