--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -54,7 +54,7 @@ layout: default
                 <!--    <h5>FRIENDS</h5>                 -->
                 <ul class="list-inline">
                     {% for friend in site.friends %}
-                        <li><a href="{{friend.href}}">{{friend.title}}</a></li>
+                        <li><a target="_blank" rel="noreferrer"  href="{{friend.href}}">{{friend.title}}</a></li>
                     {% endfor %}
                 </ul>
                 {% endif %}
@@ -131,7 +131,7 @@ layout: default
                             {% endif %}
                             {% if site.zhihu_username %}
                             <li>
-                                <a target="_blank" rel=noreferrer href="//www.zhihu.com/people/{{ site.zhihu_username }}">
+                                <a target="_blank" rel="noreferrer" href="//www.zhihu.com/people/{{ site.zhihu_username }}">
                                     <span class="fa-stack fa-lg">
                                         <em class="fa fa-circle fa-stack-2x"></em>
                                         <em class="fa  fa-stack-1x fa-inverse">知</em>
@@ -141,7 +141,7 @@ layout: default
                             {% endif %}
                             {% if site.weibo_username %}
                             <li>
-                                <a target="_blank" rel=noreferrer href="//weibo.com/{{ site.weibo_username }}">
+                                <a target="_blank" rel="noreferrer" href="//weibo.com/{{ site.weibo_username }}">
                                     <span class="fa-stack fa-lg">
                                         <em class="fa fa-circle fa-stack-2x"></em>
                                         <em class="fa fa-weibo fa-stack-1x fa-inverse"></em>
@@ -151,7 +151,7 @@ layout: default
                             {% endif %}
                             {% if site.facebook_username %}
                             <li>
-                                <a target="_blank" rel=noreferrer href="//www.facebook.com/{{ site.facebook_username }}">
+                                <a target="_blank" rel="noreferrer" href="//www.facebook.com/{{ site.facebook_username }}">
                                     <span class="fa-stack fa-lg">
                                         <em class="fa fa-circle fa-stack-2x"></em>
                                         <em class="fa fa-facebook fa-stack-1x fa-inverse"></em>
@@ -161,7 +161,7 @@ layout: default
                             {% endif %}
                             {% if site.github_username %}
                             <li>
-                                <a target="_blank" rel=noreferrer href="//github.com/{{ site.github_username }}">
+                                <a target="_blank" rel="noreferrer" href="//github.com/{{ site.github_username }}">
                                     <span class="fa-stack fa-lg">
                                         <em class="fa fa-circle fa-stack-2x"></em>
                                         <em class="fa fa-github fa-stack-1x fa-inverse"></em>
@@ -171,7 +171,7 @@ layout: default
                             {% endif %}
                             {% if site.linkedin_username %}
                             <li>
-                                <a target="_blank" rel=noreferrer href="//www.linkedin.com/in/{{ site.linkedin_username }}">
+                                <a target="_blank" rel="noreferrer" href="//www.linkedin.com/in/{{ site.linkedin_username }}">
                                     <span class="fa-stack fa-lg">
                                         <em class="fa fa-circle fa-stack-2x"></em>
                                         <em class="fa fa-linkedin fa-stack-1x fa-inverse"></em>
@@ -188,7 +188,7 @@ layout: default
                 <h5>FRIENDS</h5>             
                 <ul class="list-inline">
                     {% for friend in site.friends %}
-                        <li><a href="{{friend.href}}">{{friend.title}}</a></li>
+                        <li><a target="_blank" rel="noreferrer"  href="{{friend.href}}">{{friend.title}}</a></li>
                     {% endfor %}
                 </ul>
                 {% endif %}
