--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,9 +64,11 @@
     <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
     -->
-
+    <link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossOrigin="anonymous" />
+    <!-- 避免页面抖动
     <link rel="preload" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'" crossOrigin="anonymous" />
     <noscript><link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossOrigin="anonymous" /></noscript>
+    -->
     <link rel="preload" type="text/css" href="{{ "/css/Quanyin-global.min.css" | prepend: site.baseurl }}" as="style" onload="this.rel='stylesheet'" />
     <noscript><link rel="stylesheet" type="text/css" href="{{ "/css/Quanyin-global.min.css" | prepend: site.baseurl }}" /></noscript>
     <link rel="preload" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" as="style" onload="this.rel='stylesheet'" />
