add a post:how to summarize?

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,7 +79,7 @@
                     {% endif %}
                 </ul>
         
-                <style>p.copyright.text-muted {color: #bfbfbf;} </style>
+                <!--<style>p.copyright.text-muted {color: #bfbfbf;} </style>-->
                 <p class="copyright text-muted text-center"><span class="text-center">
                     Copyright &copy; 2017-{{ site.time | date: '%Y' }} <a href="{{site.homepage or site.url}}">Quanyin Blog</a>  
                     <!--
