--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <ul class="list-inline text-center">
                     {% if site.RSS %}
                     <li>
-                        <a target="_blank" rel="noreferrer" href="{{ "/feed.xml" | prepend: site.baseurl }}">
+                        <a target="_blank" rel="noreferrer" href="{{ '/feed.xml' | prepend: site.baseurl }}">
                             <span class="fa-stack fa-lg">
                                 <em class="fa fa-circle fa-stack-2x"></em> 
                                 <em class="fa fa-rss fa-stack-1x fa-inverse"></em> 
@@ -113,8 +113,9 @@ htTbJwSVg3sOg9DrG+NO428FEtnzf5Z+f1y9fX99NNB3eY530mPtV+dPMc76TH2q/OmmgeY530mPtV+d
                     </span>
                     <br>
                     <span class="label label-primary label-md text-center"><strong>转载请标明作者和出处并告知</strong></span>
-                </p>
-                <p class="copyright text-muted" id="count">                
+                    <!-- <p class="copyright text-muted" id="count"></p> -->
+                </p>                    
+                </span>                
             </div>
         </div>
     </div>
