--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -50,7 +50,7 @@ layout: default
 
                 <!-- Friends Blog -->
                 {% if site.friends %}
-                <hr>
+                <hr/>
                 <!--    <h5>FRIENDS</h5>                 -->
                 <ul class="list-inline">
                     {% for friend in site.friends %}
@@ -83,7 +83,7 @@ layout: default
                 <!-- Featured Tags -->
                 {% if site.featured-tags %}
                 <section>
-                    <hr class="hidden-sm hidden-xs">
+                    <hr class="hidden-sm hidden-xs" />
                     <h5><a href="{{'/tags/' | prepend: site.baseurl }}">FEATURED TAGS</a></h5>
                     <div class="tags">
                         {% for tag in site.tags %}
@@ -99,7 +99,7 @@ layout: default
 
                 <!-- Short About -->
                 <section class="visible-md visible-lg">
-                    <hr><h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
+                    <hr/><h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
                     <div class="short-about">
                         {% if site.sidebar-avatar %}
                             <img src="{{site.sidebar-avatar}}" alt=" " />
@@ -111,7 +111,7 @@ layout: default
                         <ul class="list-inline">
                             {% if site.RSS %}
                             <li>
-                                <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
+                                <a href="{{ '/feed.xml' | prepend: site.baseurl }}">
                                     <span class="fa-stack fa-lg">
                                         <em class="fa fa-circle fa-stack-2x"></em>
                                         <em class="fa fa-rss fa-stack-1x fa-inverse"></em>
@@ -184,7 +184,7 @@ layout: default
                 </section>
                 <!-- Friends Blog -->
                 {% if site.friends %}
-                <hr>
+                <hr/>
                 <h5>FRIENDS</h5>             
                 <ul class="list-inline">
                     {% for friend in site.friends %}
