debug:手滑，误删了一行,已修复

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -113,7 +113,8 @@ htTbJwSVg3sOg9DrG+NO428FEtnzf5Z+f1y9fX99NNB3eY530mPtV+dPMc76TH2q/OmmgeY530mPtV+d
                     </span>
                     <br>
                     <span class="label label-primary label-md text-center"><strong>转载请标明作者和出处并告知</strong></span>
-                    <!-- <p class="copyright text-muted" id="count"></p> -->
+                    <!-- 网站运行时间统计-->
+                    <p class="copyright text-muted" id="count"></p> 
                 </p>                    
                 </span>                
             </div>
