--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -449,3 +449,13 @@ $(document).ready(function () {
 {% if site.tota11y %}
 <script type="text/javascript" async="async" src="//cdnjs.cloudflare.com/ajax/libs/tota11y/0.1.6/tota11y.min.js"></script>
 {% endif %}
+
+{% if site.alexa %}
+<!-- Start Alexa Certify Javascript -->
+<script type="text/javascript">
+_atrk_opts = { atrk_acct:"{{site.alexa}}", domain:"quanyin.eu.org",dynamic: true};
+(function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://d31qbv1cthcecs.cloudfront.net/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
+</script>
+<noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=tIQVp1d3Zk20cU" style="display:none" height="1" width="1" alt="" /></noscript>
+<!-- End Alexa Certify Javascript -->  
+{% endif %}
