--- a/less/Quanyin-global.less
+++ b/less/Quanyin-global.less
@@ -3,6 +3,6 @@
 @import "sidebar.less";
 @import "side-catalog.less";
 @import "snackbar.less";
-@import "Quanyin-Blog.less";
+@import "Quanyin-blog.less";
 @import "plugin.less";
 @import "syntax.less";
