--- a/css/Quanyin-global.css
+++ b/css/Quanyin-global.css
@@ -1,4 +1,9 @@
 /*! Quanyin Blog v1.0.0 (https://qytang326.github.io) || Copyright 2017 Quanyin Tang <qytang326@gmail.com> */
+/* Variables */
+/* Mixins */
+/* @import "variables.less"; */
+/* Sidebar Components */
+/* Large Screen */
 @media (min-width: 1200px) {
   .post-container,
   .sidebar-container {
@@ -10,6 +15,7 @@
     padding-right: 5%;
   }
 }
+/* Container of Sidebar, also Friends */
 .sidebar-container {
   color: #bfbfbf;
   font-size: 14px;
@@ -49,6 +55,7 @@
 .sidebar-container .short-about .list-inline > li {
   padding-left: 0px;
 }
+/* Directory Section */
 .catalog-container {
   padding: 0px;
 }
@@ -313,6 +320,7 @@ button.paper-button {
   margin: 16px;
   border-radius: 2px;
 }
+/* Global Components */
 body {
   /* Quanyin learn from
      *     TypeIsBeautiful,
